[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.11", features = ["full", "extra-traits"] }

[[bin]]
name = "02-create-builder"
path = "tests/02-create-builder.rs"

[[bin]]
name = "03-call-setters"
path = "tests/03-call-setters.rs"

[[bin]]
name = "04-call-build"
path = "tests/04-call-build.rs"
